<resources>
    <string name="app_name">LongD</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="download">download</string>
    <string name="other">other</string>
    <string name="date_picker_dialog">DatePickerDialog</string>
    <string name="install">Install</string>
    <string name="popup_window">popup_window</string>
    <string name="vibrator">vibrator</string>
</resources>
