<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/download"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/download" />


    <Button
        android:id="@+id/install"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/install" />

    <Button
        android:id="@+id/date_picker_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_picker_dialog" />

    <Button
        android:id="@+id/popup_window"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/popup_window" />

    <Button
        android:id="@+id/other"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/other" />


</LinearLayout>
